# dev-machine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test-and-release.yml
aws-dev-machine/: Cargo.toml  README.md
aws-dev-machine/cfn-templates/: asg_amd64_al2.yaml  asg_amd64_ubuntu.yaml  asg_arm64_al2.yaml  asg_arm64_ubuntu.yaml  asg_ubuntu.yaml  ec2_instance_role.yaml  vpc.yaml
aws-dev-machine/src/: lib.rs  main.rs
aws-dev-machine/src/apply/: mod.rs
aws-dev-machine/src/default_spec/: mod.rs
aws-dev-machine/src/delete/: mod.rs
scripts/: build.release.sh
