[package]
name = "aws-dev-machine"
version = "0.0.0"
edition = "2021"
rust-version = "1.66"
readme = "README.md"

[[bin]]
name = "aws-dev-machine"
path = "src/main.rs"

[dependencies]
aws-manager = { version = "0.22.22", features = ["cloudformation", "ec2", "kms", "s3", "sts"] } # https://crates.io/crates/aws-manager
aws-sdk-cloudformation = "0.22.0" # https://github.com/awslabs/aws-sdk-rust/releases
aws-sdk-ec2 = "0.23.0" # https://github.com/awslabs/aws-sdk-rust/releases
clap = { version = "4.0.32", features = ["cargo", "derive"] } # https://github.com/clap-rs/clap
compress-manager = "0.0.4"
crossterm = "0.25.0"
dialoguer = "0.10.2"
env_logger = "0.10.0"
id-manager = "0.0.2"
lazy_static = "1.4.0"
log = "0.4.17"
random-manager = "0.0.2"
rust-embed = "6.4.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16" # https://github.com/dtolnay/serde-yaml/releases
tokio = { version = "1.24.1", features = ["full"] } # https://github.com/tokio-rs/tokio/releases

[dev-dependencies]
tempfile = "3.3.0"
