[package]
name = "aws-dev-machine"
version = "0.0.0"
edition = "2021"
rust-version = "1.67"
readme = "README.md"

[[bin]]
name = "aws-dev-machine"
path = "src/main.rs"

[dependencies]
aws-manager = { version = "0.24.12", features = ["cloudformation", "ec2", "kms", "s3", "sts"] } # https://crates.io/crates/aws-manager
aws-sdk-cloudformation = "0.24.0" # https://github.com/awslabs/aws-sdk-rust/releases
aws-sdk-ec2 = "0.24.0" # https://github.com/awslabs/aws-sdk-rust/releases
clap = { version = "4.1.6", features = ["cargo", "derive"] } # https://github.com/clap-rs/clap
compress-manager = "0.0.5"
crossterm = "0.26.0"
dialoguer = "0.10.3"
env_logger = "0.10.0"
id-manager = "0.0.3"
lazy_static = "1.4.0"
log = "0.4.17"
random-manager = "0.0.5"
rust-embed = "6.4.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17" # https://github.com/dtolnay/serde-yaml/releases
tokio = { version = "1.25.0", features = ["full"] } # https://github.com/tokio-rs/tokio/releases

[dev-dependencies]
tempfile = "3.3.0"
